# free-quant

./: Cargo.toml  SystemDesign.drawio  Untitled Diagram.drawio
IBApiHandler/: Cargo.toml
IBApiHandler/src/: lib.rs
IBApiHandler/tests/: tests.rs
RangeDataStorage/: Cargo.toml
RangeDataStorage/src/: lib.rs
RangeDataStorage/tests/: tests.rs
backtesting/: Cargo.toml  README.md
backtesting/src/: lib.rs  main.rs
backtesting/tests/: tests.rs
fq_data_broker/: Cargo.toml  README.md
fq_data_broker/src/: lib.rs  main.rs
fq_data_broker/tests/: tests.rs
ibapi_handler/: Cargo.toml
ibapi_handler/src/: lib.rs
ibapi_handler/tests/: tests.rs
range_data_storage/: Cargo.toml  README.md
range_data_storage/src/: lib.rs
range_data_storage/tests/: tests.rs
src/: main.rs
