workspace = { members = [ "RangeDataStorage","IBApiHandler"] }
[package]
name = "AlgoTrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibapi = "0.4.2"
IBApiHandler = {path = "./IBApiHandler"}
RangeDataStorage = {path = "./RangeDataStorage"}
