workspace = { members = [ "range_data_storage","ibapi_handler", "backtesting", "fq_data_broker", "backend"] }
[package]
name = "AlgoTrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibapi = "0.4.2"
ibapi_handler = {path = "ibapi_handler" }
range_data_storage = {path = "range_data_storage" }
