[package]
name = "fq_data_broker"
version = "0.1.0"
edition = "2021"

[dependencies]
ibapi = "0.4.2"
ibapi_handler = {path = "../ibapi_handler" }
range_data_storage = {path = "../range_data_storage" }
ordered-float = "4.2.0"
serde = { version="1.0.202", features=["serde_derive"] }
time = { version = "0.3.36" , features=["serde"]}
serde_json = "1.0.117"
rangemap = { version="1.5.1" , features=["serde1"] }
anyhow = "1.0.86"