[package]
name = "ibapi_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibapi = "0.4.2"
time = { version = "0.3.36", features = ["serde"]}
serde = { version = "1.0.202", features = ["derive"] }
range_data_storage = { path = "../range_data_storage" }
chrono = "0.4.38"
ordered-float = { version = "4.2.0", features = ["serde"] }
anyhow = "1.0.86"